# ChangeLog for dev-db/postgresql
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.375 2008/03/26 14:01:24 caleb Exp $

*postgresql-8.3.1 (26 Mar 2008)

  26 Mar 2008; Caleb Tennis <caleb@gentoo.org> +files/postgresql.conf-8.3,
  +files/postgresql.init-8.3, +files/postgresql-8.3.1-gentoo.patch,
  +files/postgresql-8.3.1-regress_su.patch,
  +files/postgresql-8.3.1-sh.patch, +postgresql-8.3.1.ebuild:
  Version bump, with ebuilds and modifications from 206725

*postgresql-8.2.7 (26 Mar 2008)

  26 Mar 2008; Caleb Tennis <caleb@gentoo.org>
  +files/postgresql-8.2.7-gentoo.patch,
  +files/postgresql-8.2.7-no-test.patch,
  +files/postgresql-8.2.7-python-threads.patch,
  +files/postgresql-8.2.7-regress_fix.patch,
  +files/postgresql-8.2.7-regress_su.patch,
  +files/postgresql-8.2.7-sh.patch, +postgresql-8.2.7.ebuild:
  Version bump

  20 Jan 2008; Martin Jackson <mjolnir@gentoo.org>
  -files/postgresql-7.3.19-cubeparse.patch,
  -files/postgresql-7.4.17-hppa-testandset.patch,
  -files/postgresql-8.0.13-sh.patch, -postgresql-7.3.19.ebuild,
  -postgresql-7.4.17.ebuild, -postgresql-8.0.13.ebuild:
  Remove vulnerable versions for #204760

  16 Jan 2008; Peter Weller <welp@gentoo.org> postgresql-7.4.19.ebuild:
  Stable on amd64; bug 204760

  16 Jan 2008; Peter Weller <welp@gentoo.org> postgresql-7.3.21.ebuild,
  postgresql-8.0.15.ebuild:
  Stable on amd64; bug 204760

  16 Jan 2008; Martin Jackson <mjolnir@gentoo.org> postgresql-7.3.21.ebuild:
  Fix multi-lib issue on 7.3.21, reported in #204760

  16 Jan 2008; Martin Jackson <mjolnir@gentoo.org>
  -files/postgresql-8.1.9-regress_su.patch,
  -files/postgresql-8.1.9-sh.patch, -files/postgresql-8.2.4-gentoo.patch,
  -files/postgresql-8.2.4-no-test.patch,
  -files/postgresql-8.2.4-python-threads.patch,
  -files/postgresql-8.2.4-regress_fix.patch,
  -files/postgresql-8.2.4-regress_su.patch,
  -files/postgresql-8.2.4-sh.patch: