@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/postgresql-8.2.7.ebuild,v 1.1 2008/03/26 13:17:58 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/postgresql-8.2.7.ebuild,v 1.2 2008/05/19 19:22:40 dev-zero Exp $
 
 EAPI="prefix"
 
@@ -26,7 +26,8 @@ RDEPEND="~dev-db/libpq-${PV}
 		ssl? ( >=dev-libs/openssl-0.9.6-r1 )
 		tcl? ( >=dev-lang/tcl-8 )
 		xml? ( dev-libs/libxml2 dev-libs/libxslt )
-		zlib? ( >=sys-libs/zlib-1.1.3 )"
+		zlib? ( >=sys-libs/zlib-1.1.3 )
+		!dev-db/postgresql-server"
 DEPEND="${RDEPEND}
 		sys-devel/autoconf
 		>=sys-devel/bison-1.875
