@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/postgresql
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.375 2008/03/26 14:01:24 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.376 2008/05/19 19:22:40 dev-zero Exp $
+
+  19 May 2008; Tiziano Müller <dev-zero@gentoo.org>
+  postgresql-7.3.21.ebuild, postgresql-7.4.19.ebuild,
+  postgresql-8.0.15.ebuild, postgresql-8.1.11.ebuild,
+  postgresql-8.2.6.ebuild, postgresql-8.2.7.ebuild, postgresql-8.3.1.ebuild:
+  Added blockers for dev-db/postgresql-server
 
 *postgresql-8.3.1 (26 Mar 2008)
 
